# alphametic

./: alphametic.cabal  puzzle.cabal
src/: Alphametic.hs  Benchmark.hs  Parser.hs  Prover.hs  Types.hs  alphametic.hs
tests/: uni-bielefeld  uni-bielefeld-timing
