name:                alphametic
version:             1.0.0.0
synopsis:            Solve alphametic programs
description:         Solve problems as like "SEND+MORE=MONEY",
                     as at <https://www.math.uni-bielefeld.de/~sillke/PUZZLES/ALPHAMETIC/>
                     
                     This is a test project for me to learn some Z3 and SimpleSMT over lunch.
homepage:            https://github.com/briansniffen/alphametic#readme
license:             BSD3
license-file:        LICENSE
author:              Brian Sniffen
maintainer:          bsniffen@akamai.com
copyright:           2016 Akamai Technologies, Inc.
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable alphametic
  hs-source-dirs:      src
  main-is:             Alphametic.hs
  other-modules:       Parser
                     , Prover
                     , Types
  default-language:    Haskell2010
  ghc-options:      -O2 -threaded -with-rtsopts=-N -main-is Alphametic
  build-depends:       base >= 4.7 && < 5
                     , parsers
                     , trifecta
                     , charset
                     , bytestring
                     , simple-smt

executable benchmark
  hs-source-dirs:      src
  main-is:             Benchmark.hs
  other-modules:       Parser
                     , Prover
                     , Types
                     , Alphametic
  default-language:    Haskell2010
  ghc-options:      -O2 -threaded -with-rtsopts=-N -main-is Benchmark
  build-depends:       base >= 4.7 && < 5
                     , criterion
                     , parsers
                     , trifecta
                     , charset
                     , bytestring
                     , simple-smt
           
