name:                puzzle
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/puzzle#readme
license:             BSD3
license-file:        LICENSE
author:              Brian Sniffen
maintainer:          bsniffen@akamai.com
copyright:           2016 Akamai Technologies, Inc.
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable puzzle
  hs-source-dirs:      src
  main-is:             Puzzle.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , criterion
                     , parsers
                     , trifecta
                     , charset
                     , bytestring
                     , simple-smt
